test/Fail/MissingDefinition.agda
{-# OPTIONS --safe #-}
module MissingDefinition where

T , U : Set -> Set
