test/Fail/MissingDefinition.err
MissingDefinition.agda:4.1-6: error: [MissingDefinitions]
The following names are declared but lack a definition:
, T U
